Fixing 'invisible' buttons.

--- a/styles/Outline.module.css
+++ b/styles/Outline.module.css
@@ -26,7 +26,7 @@ button.but:focus~span {
 }
 
 button.but {
-  color:var(--medium);
+  color:var(--darker);
   background-color: transparent;
   font-family: 'Courier New', Courier, monospace; 
   font-weight: bold;
